src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - DOB__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Healthcare plan for this patient</description>
        <inlineHelpText>Healthcare plan for this patient</inlineHelpText>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PatientAccounts</relationshipLabel>
        <relationshipName>PatientAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EnrollmentType__c</fullName>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>NonDual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>FBDual</fullName>
                </value>
                <value>
                    <fullName>PBDual</fullName>
                </value>
                <value>
                    <fullName>ESRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID that relates this individual&apos;s account record to its contact record.</description>
        <label>Individual ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is in a institution.</description>
        <inlineHelpText>Indicates whether a patient is in a institution.</inlineHelpText>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LowIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient falls within low income guidelines.</description>
        <inlineHelpText>Indicates whether a patient falls within low income guidelines.</inlineHelpText>
        <label>Low Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicaidEligibilityStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is eligible for medicaid.</description>
        <inlineHelpText>Indicates whether a patient is eligible for medicaid.</inlineHelpText>
        <label>Medicaid Eligibility Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicareEnrollee__c</fullName>
        <description>New member or continued from previous year.</description>
        <inlineHelpText>New member or continued from previous year.</inlineHelpText>
        <label>Medicare Enrollee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Enrollee</fullName>
                </value>
                <value>
                    <fullName>Continued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OREC__c</fullName>
        <description>Original Reason for Medicare Entitlement</description>
        <label>OREC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PayerType__c</fullName>
        <label>Payer Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>Unique external id</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaxId__c</fullName>
        <label>TaxId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Member Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Medicare_Id__c</fullName>
        <label>Medicare Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_NAME__c</fullName>
        <label>ORGCUSTOM4_OLD_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ribbit1__Dial_Phone__c</fullName>
        <formula>IF( Phone   &lt;&gt; &quot;&quot;,  HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N600000000wHL&amp;phonenumber=&quot;&amp;  Phone , IMAGE(&quot;https://service.ribbit.com/salesforce/img/callphone.gif&quot;, &quot;Please \&quot;EJECT\&quot; the RIBBIT Phone from the sidebar prior to using One-Click calling&quot;) ,&quot;callNumber&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dial Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Test_Field_1__c</fullName>
        <label>Test Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.SALES</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Advanced</fullName>
        <active>false</active>
        <description>More advanced details about an Account</description>
        <label>Advanced</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Represents a business or an organization</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesHousehold</fullName>
        <active>true</active>
        <description>Represents a Household</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Represents an Individual</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesPayer</fullName>
        <active>true</active>
        <description>Represents a Payer</description>
        <label>Payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>false</active>
        <description>Partner Account Details</description>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>false</active>
        <description>Simple Account Details</description>
        <label>Simple</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
</CustomObject>